# batch-file-renamer

./: .gitignore  README.md  index.py  pyproject.toml
src/batch_renamer/: __init__.py  app.py  config.py  core.py
